--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ejs": "^2.4.1",
     "font-color-contrast": "^1.0.3",
+    "lodash.kebabcase": "^4.1.1",
     "object-assign": "^4.0.1"
   },
   "devDependencies": {
